Bug #2188 - Accessibility : 2010 Theme links + link hover fail contrast checker
Additional tweaks to fix contrast errors

--- a/wp-content/mu-plugins/theme-fixes/twentyten.css
+++ b/wp-content/mu-plugins/theme-fixes/twentyten.css
@@ -18,3 +18,11 @@ a:visited,
 .comment-meta a:visited {
     color: #743399;
 }
+.entry-utility,
+.entry-meta,
+#respond label{
+    color: #000;
+}
+#respond .required{
+    color: #9f2d1d;
+}
